Fix layout shift on navigation

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -309,7 +309,7 @@ footer {
 }
 
 .nav-item {
-  transition: opacity 250ms ease-in-out, transform 250ms ease-in-out;
+  transition: transform 250ms ease-in-out;
 }
 
 .nav-list:hover .nav-item:not(:hover):not(:focus) {
@@ -318,7 +318,7 @@ footer {
 
 .nav-item:hover,
 .nav-item:focus {
-  font-weight: var(--fw-bold);
+  transform: scale(1.1);
 }
 
 @media (max-width: 900px) {
